allow unit_tests to re-create service manager context.

ServiceManagerContext is designed to be created only once. However in
unit tests in batch mode TestServiceManagerContext might be recreated
many times for the same process. This calls several asserts. This CL
resets static files association after destroying
TestServiceManagerContext

TEST=unit_tests passes, number of retry tests changed 81->4 time
     from 256 seconds to 88.
BUG=693559

Review-Url: https://codereview.chromium.org/2749653002
Cr-Commit-Position: refs/heads/master@{#456517}

Former-commit-id: 1a2563dcc211e71fa8c32f52c9bc4d64d71a42cc