content/browser/child_process_launcher_helper_android.cc
@@ -170,6 +170,11 @@ void ChildProcessLauncherHelper::SetRegisteredFilesForService(
 }
 
 // static
+void ChildProcessLauncherHelper::ResetRegisteredFilesForTesting() {
+  ResetFilesToShareForTestingPosix();
+}
+
+// static
 base::File OpenFileToShare(const base::FilePath& path,
                            base::MemoryMappedFile::Region* region) {
   return base::File(base::android::OpenApkAsset(path.value(), region));
