content/browser/child_process_launcher_helper_win.cc
@@ -124,5 +124,8 @@ void ChildProcessLauncherHelper::SetRegisteredFilesForService(
   DCHECK(required_files.empty());
 }
 
+// static
+void ChildProcessLauncherHelper::ResetRegisteredFilesForTesting() {}
+
 }  // namespace internal
 }  // namespace content
